--- a/styles/base.css
+++ b/styles/base.css
@@ -18,3 +18,9 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.container{
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
